[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "port-scanner"
version = "1.0.0"
description = "A fast, async port scanner with banner grabbing"
authors = [{name = "Joel Beauregard", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["port-scanner", "network", "security"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]

dependencies = [
    "scapy>=2.5.0",
    "aiohttp>=3.8.0",
    "tabulate>=0.9.0",
]

[project.scripts]
port-scanner = "port_scanner.cli:main"

[project.urls]
Homepage = "https://github.com/JoelBeau/port-scanner"
Repository = "https://github.com/JoelBeau/port-scanner"