[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "socketscout"
version = "1.0.2"
description = "A fast, async port scanner with banner grabbing"
authors = [{name = "Joel Beauregard", email = "JoelBeau@users.noreply.github.com"}]
readme = "README.md"
requires-python = ">=3.8"
license = "GPL-3.0"
license-files = ["LICENSE"]
keywords = ["socketscout", "port-scanner", "network", "security"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
]

dependencies = [
    "scapy>=2.5.0",
    "aiohttp>=3.8.0",
    "tabulate>=0.9.0",
]

[project.scripts]
socketscout = "port_scanner.cli:main"

[project.urls]
Homepage = "https://github.com/JoelBeau/socketscout"
Repository = "https://github.com/JoelBeau/socketscout"